--- a/destaques.css
+++ b/destaques.css
@@ -13,50 +13,40 @@
 }
 
 .destaques__titulo {
-    background: rgba(0, 0, 0, 5);
-    color: #FDFDFD;
+    background: rgba(0, 0, 0, .5);
+    color: #fdfdfd;
     padding: .6rem;
     text-align: center;
     width: 100%;
 }
 
 .destaques__principal {
-    background-image: url(../img/fortnite.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    background: url('../img/fortnite.jpg') center / cover no-repeat;
+    grid-column: 1 / 4;
+    grid-row: 1 / 3;
 }
 
 .destaques__secundario:nth-child(2) {
-    background-image: url(../img/pubg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    grid-column-start: 4;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 1;
+    background: url('../img/pubg.jpg') center / cover no-repeat;
+    grid-column: 4 / 4;
+    grid-row: 1 / 1;
 }
 
 .destaques__secundario:nth-child(3) {
-    background: url("../img/slack.png") center / cover no-repeat;
+    background: url('../img/slack.png') center / cover no-repeat;
     grid-column: 4 / 4;
     grid-row: 2 / 2;
 }
 
 .destaques__secundario:nth-child(4) {
-    background: url("../img/whatsapp.png") center / cover no-repeat;
+    background: url('../img/whatsapp.png') center / cover no-repeat;
     grid-column: 4 / 4;
     grid-row: 3 / 3;
 }
 
 .destaques__secundario:nth-child(5) {
-    background: url("../img/cs-go.jpg") center / cover no-repeat;
-    grid-column: 3 / 4;
+    background: url('../img/cs-go.jpg') center / cover no-repeat;
+    grid-column: 3 / 3;
     grid-row: 3 / 3;
 }
 
@@ -69,12 +59,12 @@
     display: flex;
     flex-wrap: wrap;
     height: 100%;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
 
 .destaques__categorias___item {
     align-items: center;
-    background: #FDFDFD;
+    background: #fdfdfd;
     border-left: 5px solid transparent;
     color: #333333;
     display: flex;
